--- a/src/org_analytics/index.html
+++ b/src/org_analytics/index.html
@@ -22,7 +22,7 @@
               <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path>
             </svg>
           </div>
-          <span class="text-sm font-medium text-gray-900 dark:text-white">My Awesome Org</span> 
+          <span id = "name" class="text-sm font-medium text-gray-900 dark:text-white">My Awesome Org</span> 
         </div>
 
         <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -82,48 +82,41 @@
     </div>
 
     <div class="grid gap-5 grid-cols-12 h-[100%] w-[100%] ml-64">
+        <h1 class="text-2xl font-bold text-black ml-10">Analytics</h1>
 
-      <div class="grid row-start-1 col-start-2 col-end-12 text-white place-content-center w-full h-[20vh] p-10 rounded-lg">
-        <div class="grid flex items-center row-start-3 grid grid-cols-2 gap-6 border-b border-t border-gray-200 py-4 dark:border-gray-700 md:py-8 lg:grid-cols-4 xl:gap-16">
-          <div>
-            <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <div class="grid row-start-2 col-start-2 col-end-12 text-white place-content-center w-full h-[20vh] p-10 rounded-lg">
+        <div class="grid flex justify-center items-center grid-cols-3 gap-6 border-b-4 border-t-4 border-gray-200 py-4 border-10 border-white md:py-8 lg:grid-cols-3 xl:gap-16">
+          <div class="text-center">
+            <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500 mx-auto" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312" />
             </svg>
             <h3 class="mb-2 text-gray-500 dark:text-gray-400">Total Volunteers RSVP</h3>
-            <span class="flex items-center text-2xl font-bold text-gray-900 dark:text-white">24</span>
+            <span class="text-2xl font-bold text-gray-900 dark:text-white">24</span>
           </div>
-          <div>
-            <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      
+          <div class="text-center">
+            <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500 mx-auto" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
               <path stroke="currentColor" stroke-width="2" d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z" />
             </svg>
             <h3 class="mb-2 text-gray-500 dark:text-gray-400">Total Number of Events Published</h3>
-            <span class="flex items-center text-2xl font-bold text-gray-900 dark:text-white">16</span>
+            <span class="text-2xl font-bold text-gray-900 dark:text-white">16</span>
           </div>
-          <div>
-            <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      
+          <div class="text-center">
+            <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500 mx-auto" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
             </svg>
             <h3 class="mb-2 text-gray-500 dark:text-gray-400">Number of Upcoming Events</h3>
-            <span class="flex items-center text-2xl font-bold text-gray-900 dark:text-white">3</span>
-          </div>
-          <div>
-            <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9h13a5 5 0 0 1 0 10H7M3 9l4-4M3 9l4 4" />
-            </svg>
-            <h3 class="mb-2 text-gray-500 dark:text-gray-400">Total M:F Ratio</h3>
-            <span class="flex items-center text-2xl font-bold text-gray-900 dark:text-white">1:2</span>
+            <span class="text-2xl font-bold text-gray-900 dark:text-white">3</span>
           </div>
         </div>
-      </div>
-      <div class="grid row-start-6 col-start-2 col-end-7 bg-gray-900 text-white place-content-center w-full h-[40vh] p-10 rounded-lg">
+      </div>      
+      <div class="grid row-start-6 col-start-4 col-end-10 bg-gray-900 text-white place-content-center w-full h-[40vh] p-10 rounded-lg">
         <p class="text-2xl">Pretend this is a graph</p>
-      </div>
-      <div class="grid row-start-6 col-start-7 col-end-12 bg-gray-900 text-white place-content-center w-full h-[40vh] p-10 rounded-lg">
-        <p class="text-2xl">Pretend this is a pie chart</p>
       </div>
     </div>
 
-    <script src="../main.js"></script>
+    <script type="module" src="index.js"></script>
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
