--- a/src/org_events/index.html
+++ b/src/org_events/index.html
@@ -86,7 +86,7 @@
               <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path>
             </svg>
           </div>
-          <span class="text-sm font-medium text-gray-900 dark:text-white">My Awesome Org</span> 
+          <span id = "name" class="text-sm font-medium text-gray-900 dark:text-white">My Awesome Org</span> 
         </div>
         
         <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -146,8 +146,9 @@
     </div>
 
     <!-- Main Content for Events -->
-    <div class="main-content ml-64 p-8">
-
+    <div class="main-content flex-1 ml-64 p-8">
+      <h1 class="text-2xl font-bold text-black ml-3 -mt-24 -translate-y-35">Your Events</h1>
+      <br></br>
       <!-- Placeholder when no events are created -->
       <div id="no-events" class="bg-gray-100 text-black p-4 rounded-md hidden">
         <p>You have not created any events yet. Add them here!</p>
