--- a/src/org_home/index.html
+++ b/src/org_home/index.html
@@ -22,7 +22,7 @@
               <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path>
             </svg>
           </div>
-          <span class="text-sm font-medium text-gray-900 dark:text-white">My Awesome Org</span> 
+          <span id = "name" class="text-sm font-medium text-gray-900 dark:text-white">My Awesome Org</span> 
         </div>
         
         <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -82,20 +82,21 @@
     </div>
     <div class="grid gap-5 px-5 grid-cols-12 h-[100%] w-[100%] ml-64">
       <div class="grid h-[30vh] col-start-1 col-end-13 text-gray-700 place-content-center w-full">
-        <p class="text-4xl">Welcome, [org-name].</p>
+        <p id="welcome-message" class="text-4xl">Welcome, [org-name].</p>
       </div>
 
-      <div class="grid row-start-2 col-start-1 col-end-5 bg-gray-700 text-white place-content-center w-full h-[20vh] rounded-xl">
+      <div class="grid row-start-2 col-start-1 col-end-5 bg-gray-700 text-white place-content-center w-full h-[20vh] rounded-xl hover:bg-gray-600 transition duration-300">
         <a href = "../org_analytics/"><p class="text-2xl" style = "color:rgb(161, 255, 253);">Analytics</p></a>
       </div>
-      <div class="grid row-start-2 col-start-5 col-end-9 bg-gray-700 text-white place-content-center w-full rounded-xl">
+      <div class="grid row-start-2 col-start-5 col-end-9 bg-gray-700 text-white place-content-center w-full rounded-xl hover:bg-gray-600 transition duration-300">
         <a href = "../org_announcements/"><p class="text-2xl" style = "color:rgb(161, 255, 253)">Announcements</p></a>
       </div>
-      <div class="grid row-start-2 col-start-9 col-end-13 bg-gray-700 text-white place-content-center w-full h-[20vh] rounded-xl">
+      <div class="grid row-start-2 col-start-9 col-end-13 bg-gray-700 text-white place-content-center w-full h-[20vh] rounded-xl hover:bg-gray-600 transition duration-300">
         <a href = "../org_events/"><p class="text-2xl" style = "color:rgb(161, 255, 253);">Your Events</p></a>
       </div>
     </div>
-    <script src="../ main.js"></script>
+    <script src="../main.js"></script>
+    <script type="module" src="index.js"></script>
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
