small test push

--- a/src/ind_home/index.html
+++ b/src/ind_home/index.html
@@ -74,7 +74,7 @@
 
     <div class="grid gap-5 px-5 grid-cols-12 h-[100%] w-[100%] ml-64">
       <div class="grid h-[30vh] col-start-1 col-end-13 text-gray-700 place-content-center w-full">
-        <p class="text-4xl">Welcome, [First Name] + [Last Name].</p>
+        <p class="text-4xl" id="welcome-message">Welcome, [First Name] + [Last Name].</p>
       </div>
 
       <div class="grid row-start-2 col-start-3 col-end-7 bg-gray-700 text-white place-content-center w-full h-[20vh] rounded-xl">
