--- a/src/org_events/index.html
+++ b/src/org_events/index.html
@@ -155,9 +155,9 @@
     <script>
       // Fake events data - CHANGE LATER
       const Events = [
-        { name: "Music Festival", description: "Enjoy live performances from various artists.", date: "2024-10-15", location: "Downtown Park" },
-        { name: "Tech Conference", description: "Meet industry leaders and explore new technologies.", date: "2024-11-03", location: "Tech Center" },
-        { name: "Art Expo", description: "Explore art from various creators.", date: "2024-09-30", location: "Art Gallery" }
+        { name: "Music Festival", description: "Enjoy live performances from various artists. This includes performances by popular artists like Taylor Swift, Drake, Kendrick Lamar, and more. Ticket funding goes to cancer research.", date: "10/15/2024", location: "Downtown Park" },
+        { name: "Tech Conference", description: "Meet industry leaders and explore new technologies.", date: "11/03/2024", location: "Tech Center" },
+        { name: "Art Expo", description: "Explore art from various creators.", date: "9/30/2024", location: "Art Gallery" }
       ];
 
       function displayEvents(events) {
