--- a/src/org_events/index.html
+++ b/src/org_events/index.html
@@ -194,8 +194,8 @@
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M5 12h14m-7 7V5"/>
       </svg>      
     </a>
-    <script src="../main.js"></script>
-    <script src="../index.js"></script>
+    <script type = "module" src="/main.js"></script>
+    <script type = "module" src="index.js"></script>
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
