--- a/src/org_analytics/index.html
+++ b/src/org_analytics/index.html
@@ -79,7 +79,7 @@
         <div class="grid flex justify-center items-center grid-cols-3 gap-6 border-b-4 border-t-4 border-gray-200 py-4 border-10 border-white md:py-8 lg:grid-cols-3 xl:gap-16">
           <div class="text-center">
             <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500 mx-auto" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312" />
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
             </svg>
             <h3 class="mb-2 text-gray-500 dark:text-gray-400">Total Volunteers RSVP</h3>
             <span class="text-2xl font-bold text-gray-900 dark:text-white">823</span>
@@ -87,7 +87,7 @@
       
           <div class="text-center">
             <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500 mx-auto" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-              <path stroke="currentColor" stroke-width="2" d="M11.083 5.104c.35-.8 1.485-.8 1.834 0l1.752 4.022a1 1 0 0 0 .84.597l4.463.342c.9.069 1.255 1.2.556 1.771l-3.33 2.723a1 1 0 0 0-.337 1.016l1.03 4.119c.214.858-.71 1.552-1.474 1.106l-3.913-2.281a1 1 0 0 0-1.008 0L7.583 20.8c-.764.446-1.688-.248-1.474-1.106l1.03-4.119A1 1 0 0 0 6.8 14.56l-3.33-2.723c-.698-.571-.342-1.702.557-1.771l4.462-.342a1 1 0 0 0 .84-.597l1.753-4.022Z" />
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
             </svg>
             <h3 class="mb-2 text-gray-500 dark:text-gray-400">Total Number of Events Published</h3>
             <span class="text-2xl font-bold text-gray-900 dark:text-white">51</span>
@@ -106,15 +106,15 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
             </svg>
             <h3 class="mb-2 text-gray-500 dark:text-gray-400">Projected Amount of Funds Raised</h3>
-            <span class="text-2xl font-bold text-gray-900 dark:text-white">0</span>
+            <span class="text-2xl font-bold text-gray-900 dark:text-white">4115</span>
           </div>
 
           <div class="text-center">
             <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500 mx-auto" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
             </svg>
-            <h3 class="mb-2 text-gray-500 dark:text-gray-400">Number of Attendees</h3>
-            <span class="text-2xl font-bold text-gray-900 dark:text-white">0</span>
+            <h3 class="mb-2 text-gray-500 dark:text-gray-400">Total Number of Attendees</h3>
+            <span class="text-2xl font-bold text-gray-900 dark:text-white">100</span>
           </div>
 
           <div class="text-center">
@@ -122,7 +122,7 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
             </svg>
             <h3 class="mb-2 text-gray-500 dark:text-gray-400">M:F Ratio</h3>
-            <span class="text-2xl font-bold text-gray-900 dark:text-white">2</span>
+            <span class="text-2xl font-bold text-gray-900 dark:text-white">1.03</span>
           </div>
 
           <div class="text-center">
@@ -130,7 +130,7 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
             </svg>
             <h3 class="mb-2 text-gray-500 dark:text-gray-400">Users' Favorite Event</h3>
-            <span class="text-2xl font-bold text-gray-900 dark:text-white">0</span>
+            <span class="text-2xl font-bold text-gray-900 dark:text-white">Music Festival</span>
           </div>
 
           <div class="text-center">
@@ -138,15 +138,15 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
             </svg>
             <h3 class="mb-2 text-gray-500 dark:text-gray-400">Number of Recurring Donations</h3>
-            <span class="text-2xl font-bold text-gray-900 dark:text-white">0</span>
+            <span class="text-2xl font-bold text-gray-900 dark:text-white">9</span>
           </div>
 
           <div class="text-center">
             <svg class="mb-2 h-8 w-8 text-gray-400 dark:text-gray-500 mx-auto" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
             </svg>
-            <h3 class="mb-2 text-gray-500 dark:text-gray-400">Number of Upcoming Events</h3>
-            <span class="text-2xl font-bold text-gray-900 dark:text-white">0</span>
+            <h3 class="mb-2 text-gray-500 dark:text-gray-400">RSVP:Attended Ratio</h3>
+            <span class="text-2xl font-bold text-gray-900 dark:text-white">0.74</span>
           </div>
 
 
